[package]
name = "yew-app"
version = "0.1.0"
authors = ["David <dav.baz@alice.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
gloo = "0.2.1"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlParagraphElement',
  'console',
  'KeyboardEvent',
  'Node',
  'CssStyleDeclaration'
]

